RIA-4474 Enabled fortify scan for nightly build