@@ -109,6 +109,13 @@ task smoke(type: Test) {
   classpath = sourceSets.smokeTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
+
 checkstyle {
   maxWarnings = 0
   toolVersion = '8.29'
@@ -237,6 +244,10 @@ repositories {
   mavenLocal()
   jcenter()
   mavenCentral()
+
+  maven {
+    url 'https://www.jitpack.io'
+  }
 }
 
 def versions = [
@@ -324,6 +335,8 @@ dependencies {
   testCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
   testCompile group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
   testCompile group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+
+  testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
 
   testImplementation group: 'org.springframework.security', name: 'spring-security-test'
 
